; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/bios/extr_bios_parser_helper.c_bios_set_scratch_critical_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/bios/extr_bios_parser_helper.c_bios_set_scratch_critical_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc_bios = type { i32 }

@BIOS_SCRATCH_6 = common dso_local global i32 0, align 4
@S6_CRITICAL_STATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bios_set_scratch_critical_state(%struct.dc_bios* %0, i32 %1) #0 {
  %3 = alloca %struct.dc_bios*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.dc_bios* %0, %struct.dc_bios** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  %8 = zext i1 %7 to i64
  %9 = select i1 %7, i32 1, i32 0
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* @BIOS_SCRATCH_6, align 4
  %11 = load i32, i32* @S6_CRITICAL_STATE, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @REG_UPDATE(i32 %10, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @REG_UPDATE(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
